2002-12-08  Martin Bjorklund  <mbj@lvm>

	* elisp/erl-service.el (erl-find-source-under-point): Don't ask
	for nodename if a local function definition is asked for.

2002-12-06  Martin Bjorklund  <mbj@lvm>

	* elisp/edb.el (edb-synch-breakpoints): Added "synch all
	breakpoints to erlang" command, bound to C-c C-d S.  Might be used
	after a buffer with breakpoints has been modified, recompiled and
	loaded to erlang, to re-apply all breakpoints in the buffer.

	* elisp/edb.el (edb-breakpoint-stale-face): Added a face which is
	used to mark breakpoints to be out of synch when a buffer is
	modified.

	* elisp/edb.erl: Cleanups.

2002-12-06  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-pman-kill-process): Added "kill this
	process" command, bound to 'k' (patch from Mats Cronqvist.)

	* elisp/erl.el (erl-exit): Fixed stupid bug.

	* elisp/edb.el (edb-monitor): Now putting the point at the last
	process after popping up the monitor (patch from Mats Cronqvist.)

2002-11-30  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-make-breakpoint-overlay): Tiny tweak of
	setting the overlay "rear advance" to nil. This means that if you
	open a new line following a breakpoint, the overlay won't spill
	over onto it.

2002-11-28  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-attach-mode): Bound "b" to
	edb-toggle-breakpoint in attach buffers, as a shortcut.

2002-11-28  Martin Bjorklund  <mbj@bluetail.com>

	* elisp/edb.el: Added visual breakpoints, both in source files and
	the attach buffer.  It uses the customizable face
	'edb-breakpoint-face' for breakpoint highlighting.
	
	* elisp/distel.el: Extended the Erlang menu with a 'distel'
	submenu, which contains the common distel functions.

	* elisp/derl.el (derl-use-trace-buffer): Added a customizable
	'derl-use-trace-buffer' (default t) which is used to turn on/off
	the trace buffer.

	* elisp/net-fsm.el (fsm-use-debug-buffer): Added a customizable